# wails-yew-template

./: .gitignore  LICENSE  README.md  app.go  go.mod  main.go  wails.json
frontend/: Cargo.toml  app.scss  index.html  styles.scss
frontend/src/: app.rs
